include_directories(${PROJECT_SOURCE_DIR}/include)

file(GLOB_RECURSE all_tests *.cpp)
foreach(v ${all_tests})
    string(REGEX MATCH "test/.*" relative_path ${v})
    # message(${relative_path})
    string(REGEX REPLACE "test/" "" target_name ${relative_path})
    # message(${target_name})
    string(REGEX REPLACE ".cpp" "" target_name ${target_name})
    # message(${target_name})
    add_executable(${target_name} ${v} $<TARGET_OBJECTS:hpsf>)
endforeach()
